--- a/app/views/homePage.ejs
+++ b/app/views/homePage.ejs
@@ -70,12 +70,12 @@
             <h6>Access Control</h6>
           </a>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
+        <!-- <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
           <a href="/approveScore">
             <img src="/images/011-test.svg"/>
             <h6>Approve Match Score</h6>
           </a>
-        </div>
+        </div> -->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
             <img src="/images/reports.svg"/>
             <h6>Reports</h6>
