--- a/app/views/newTournamentReg.ejs
+++ b/app/views/newTournamentReg.ejs
@@ -41,7 +41,7 @@
                 <h3>New Tournament Registration</h3>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Name:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Name:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <input required name="" type="text" placeholder="Tournament Name"
                         class="input-xlarge form-control" />
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Type:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Type:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <select required id="" name="" class="input-xlarge form-control">
                             <option>International</option>
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Country:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Country:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <select required id="" name="" class="input-xlarge form-control">
                             <option>India (Country Details From DB)</option>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Format:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <div>
@@ -117,17 +117,17 @@
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <textarea required class="form-control input-xlarg team-names" name="" id=""></textarea>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Start Date:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Start Date:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <input required format="mm-dd-yyyy" id="" name="" type="date" class="input-xlarge form-control" />
                     </div>
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">End Date:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">End Date:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <input format="mm-dd-yyyy" id="doj" name="" type="date" class="input-xlarge form-control"/>
                     </div>
