--- a/app/views/playerRegistration.ejs
+++ b/app/views/playerRegistration.ejs
@@ -40,9 +40,9 @@
                 <h3>New Player Registration</h3>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Name:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Name:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                        <input required name="playerFirstName" type="text" placeholder="Player's First Name"
+                        <input required name="playerFirstName" type="text" placeholder="Player's First Name*"
                         class="input-xlarge form-control" />
                     </div>
 
@@ -61,7 +61,7 @@
                 </div> -->
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Batting Style:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Batting Style:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <select required id="" name="battingStyle" class="input-xlarge form-control">
                             <option value="">Select</option>
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Bowling Style:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Bowling Style:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <select required id="" name="bowlingStyle" class="input-xlarge form-control">
                             <option value="">Select</option>
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team Name:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team Name:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <select required id="" name="teamName" class="input-xlarge form-control">
                             <option value="">Select</option>
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player Image:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player Image:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <div class="input-group">
                           <div class="custom-file">
@@ -107,14 +107,14 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Date of Birth:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Date of Birth:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <input required format="mm-dd-yyyy" id="" name="playerDOB" type="date" class="input-xlarge form-control" />
                     </div>
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Country of Origin:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Country of Origin:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <select required id="" name="playerCountry" class="input-xlarge form-control">
                             <option value="">Select</option>
