--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -188,3 +188,7 @@ table.player-list td, table.player-list th {
   width: 100%;
   position: relative;
   display: block; }
+
+.mandatory-field {
+  color: red;
+  font-weight: bold; }
