trello UI changes
trello UI changes

--- a/app/views/error.ejs
+++ b/app/views/error.ejs
@@ -64,15 +64,11 @@
     <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
 <body>
-    <div class="logo-banner">
-        <input class="logo-text text-button" type="button" name="" id="fetchCanVendorMap" value="Time Inc.">
-
-    </div>
 
     
     <div class="container">
 
-            <p style="margin-top: 3%; font-size: 25px; font-family: arial;text-align: center;"><%= message %></p>
+            <p style="margin-top: 3%; font-size: 25px; font-family: arial;text-align: center;">You are not authorized to view this page</p>
     </div>
 
 </body>
