--- a/app/views/manageUsers.ejs
+++ b/app/views/manageUsers.ejs
@@ -85,7 +85,7 @@
       </table>
 </div>
 
-<footer class="footer-section">
+<footer class="footer-section" style="position: absolute;">
     <p>Copyright © 2018 SportsLens</p>
 </footer>
 
