--- a/app/views/updateDetails.ejs
+++ b/app/views/updateDetails.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-    <title>Home Page</title>
+    <title>Update Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
           <link rel="stylesheet" type="text/css" href="/css/style2.css" />
@@ -34,55 +34,20 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-          <a href="/newTeam">
-            <img src="/images/003-sports-and-competition.svg"/>
-            <h6>New Team Registration</h6>
-          </a>
+            <img src="/images/015-bench.svg"/>
+            <h6>Update Team Details</h6>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-          <a href="/newPlayer">
-            <img src="/images/004-player.svg"/>
-            <h6>New Player Registration</h6>
-          </a>
+            <img src="/images/update-player-add.svg"/>
+            <h6>Update Player Details</h6>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-          <a href="/newTournament">
-            <img src="/images/002-playoff.svg"/>
-            <h6>New Tournament Registration</h6>
-          </a>
+            <img src="/images/008-diagram.svg"/>
+            <h6>Update Tournament Details</h6>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-          <a href="/newMatch">
-            <img src="/images/002-cricket-1.svg"/>
-            <h6>New Match Registration</h6>
-          </a>
-        </div>
-    </div>
-
-    <div class="row margin-top-20">
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-            <a href="/updateDetails">
-              <img src="/images/012-download.svg"/>
-              <h6>Update Details</h6>
-            </a>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-          <a href="/accessControl">
-            <img src="/images/013-access.svg"/>
-            <h6>Access Control</h6>
-          </a>
-        </div>
-        <!-- <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-          <a href="/approveScore">
-            <img src="/images/011-test.svg"/>
-            <h6>Approve Match Score</h6>
-          </a>
-        </div> -->
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-            <a href="/viewreports">
-              <img src="/images/reports.svg"/>
-              <h6>Reports</h6>
-            </a>
+            <img src="/images/001-cricket.svg"/>
+            <h6>Update Match Details</h6>
         </div>
     </div>
 </div>
