--- a/app/views/playerRegistration.ejs
+++ b/app/views/playerRegistration.ejs
@@ -30,6 +30,27 @@
         </div>
     </div>
 
+
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+        
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="alert alert-success">Success</h4>
+            </div>
+            <div class="modal-body">
+              <p>Data Entered Successfully.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+          
+        </div>
+    </div>
+
 <div class="container">
     <div class="row">
          <form class="form-horizontal action-form newplayer" id="newPlayerDetails" action="newPlayerData" method="post" novalidate>
@@ -87,7 +108,7 @@
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <select required id="" name="teamName" class="input-xlarge form-control">
                             <option value="">Select</option>
-                            <option value="test3">test3</option>
+                            <option value="IND">INDIA</option>
                             <option value="Team2">Team 2</option>
                             <option value="Team3">Team 3</option>
                         </select>
