--- a/app/views/updateDetails.ejs
+++ b/app/views/updateDetails.ejs
@@ -34,16 +34,23 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-            <img src="/images/015-bench.svg"/>
-            <h6>Update Team Details</h6>
+            <a href="/updateTeam">
+              <img src="/images/015-bench.svg"/>
+              <h6>Update Team Details</h6>
+            </a>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-            <img src="/images/update-player-add.svg"/>
-            <h6>Update Player Details</h6>
+            <a href="/updatePlayer">
+              <img src="/images/update-player-add.svg"/>
+              <h6>Update Player Details</h6>
+            </a>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
-            <img src="/images/008-diagram.svg"/>
-            <h6>Update Tournament Details</h6>
+            <a href="/updateTournament">
+              <img src="/images/008-diagram.svg"/>
+              <h6>Update Tournament Details</h6>
+            </a>
+
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
             <img src="/images/001-cricket.svg"/>
