--- a/app/views/NewmatchReg.ejs
+++ b/app/views/NewmatchReg.ejs
@@ -42,9 +42,15 @@
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Name:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <select required id="" name="" class="input-xlarge form-control">
-                                    <option>IND vs WI - 2018</option>
-                                    <option>IND vs ENG - 2018</option>
+                                <select required id="tournamentName" name="tournamentName" class="input-xlarge form-control">
+                                    <option value="">--Select--</option>
+                                    <%= tournamentList[0] %>
+                                    <% for(var i=0; i<tournamentList[0].length; i++) {%>
+                                       <%if (tournamentList[0][i].tournament_name.length > 0) { %>
+                                            <option value=<%= tournamentList[0][i].tournament_id %>><%= tournamentList[0][i].tournament_name %></option>
+                                               
+                                       <% } %>
+                                    <% } %>
                                 </select>
                             </div>
                         </div>
@@ -52,10 +58,14 @@
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team 1:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <select required id="" name="" class="input-xlarge form-control">
-                                    <option>India (From DB)</option>
-                                    <option>West Indies</option>
-                                    <option>England</option>
+                                <select required id="teamOne" name="teamOne" class="input-xlarge form-control">
+                                    <option value="">--Select--</option>
+                                    <% for(var i=0; i<teamsList[0].length; i++) {%>
+                                       <%if (teamsList[0][i].team_code.length > 0) { %>
+                                            <option value=<%= teamsList[0][i].team_code %>><%= teamsList[0][i].team_name %></option>
+                                               
+                                       <% } %>
+                                    <% } %>
                                 </select>
                             </div>
                         </div>
@@ -63,10 +73,14 @@
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team 2:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <select required id="" name="" class="input-xlarge form-control">
-                                    <option>India (From DB)</option>
-                                    <option>West Indies</option>
-                                    <option>England</option>
+                                <select required id="teamtwo" name="teamtwo" class="input-xlarge form-control">
+                                    <option value="">--Select--</option>
+                                    <% for(var i=0; i<teamsList[0].length; i++) {%>
+                                       <%if (teamsList[0][i].team_code.length > 0) { %>
+                                            <option value=<%= teamsList[0][i].team_code %>><%= teamsList[0][i].team_name %></option>
+                                               
+                                       <% } %>
+                                    <% } %>
                                 </select>
                             </div>
                         </div>
@@ -83,63 +97,66 @@
                         </div> -->
 
                         <div class="row">
-                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Start Date:<span class="mandatory-field">*</span></label>
+                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Match Type:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                 <input required format="mm-dd-yyyy" id="" name="" type="date" class="input-xlarge form-control" />
+                                <select required id="matchType" name="matchType" class="input-xlarge form-control">
+                                    <option value="">--Select--</option>
+                                    <% for(var i=0; i<formatList[0].length; i++) {%>
+                                       <%if (formatList[0][i].match_form_name.length > 0) { %>
+                                            <option value=<%= formatList[0][i].match_form_code %>><%= formatList[0][i].match_form_name %></option>
+                                               
+                                       <% } %>
+                                    <% } %>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Match Date:<span class="mandatory-field">*</span></label>
+                            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                                 <input required format="mm-dd-yyyy" id="matchDate" name="matchDate" type="date" class="input-xlarge form-control" />
                             </div>
                         </div>
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Venue:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input name="" type="text" placeholder="Venue" class="input-xlarge form-control" value="" />
+                                <input name="venue" id="venue" type="text" placeholder="Venue" class="input-xlarge form-control" value="" required/>
                             </div>
                         </div>
 
                         <div class="row">
-                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Ground:<span class="mandatory-field">*</span></label>
+                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Stadium:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input name="" type="text" placeholder="Ground" class="input-xlarge form-control" value="" />
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Match Type:<span class="mandatory-field">*</span></label>
-                            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <select required id="" name="" class="input-xlarge form-control">
-                                    <option value="">select</option>
-                                    <option value="ODI">ODI</option>
-                                    <option value="T20">T20</option>
-                                    <option value="Test">Test</option>
-                                </select>
+                                <input name="stadium" id="stadium" type="text" placeholder="Ground" class="input-xlarge form-control" value="" required/>
                             </div>
                         </div>
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Umpire 1:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input name="" type="text" placeholder="Umpire 1" class="input-xlarge form-control" value="" />
+                                <input name="umpOne" id="umpOne" type="text" placeholder="Umpire 1" class="input-xlarge form-control" value="" />
                             </div>
                         </div>
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Umpire 2:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input name="" type="text" placeholder="Umpire 2" class="input-xlarge form-control" value="" />
+                                <input name="umpTwo" id="umpTwo" type="text" placeholder="Umpire 2" class="input-xlarge form-control" value="" />
                             </div>
                         </div>
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Referee:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input name="" type="text" placeholder="Referee" class="input-xlarge form-control" value="" />
+                                <input name="referee" id="referee" type="text" placeholder="Referee" class="input-xlarge form-control" value="" />
                             </div>
                         </div>
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Analyst Name:<span class="mandatory-field">*</span></label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input required name="" type="text" placeholder="Analyst Name"
+                                <input required name="analyst" id="analyst" type="text" placeholder="Analyst Name"
                                 class="input-xlarge form-control" />
                             </div>
                         </div>
