--- a/app/views/updateTeam.ejs
+++ b/app/views/updateTeam.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-    <title>Team Registration</title>
+    <title>Update Team Details</title>
             <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -34,19 +34,35 @@
 
 <div class="container">
     <div class="row">
-         <form class="form-horizontal action-form newteam" id="newTeamDetails" action="newTeamData" method="post" novalidate>
+         <form class="form-horizontal action-form newteam" id="updateTeamDetails" action="updateTeamDetails" method="post" novalidate>
 
             <fieldset class="form-content">
                 <!-- Address form -->
          
-                <h3>New Team Registration</h3>
+                <h3>Update Team Details</h3>
+
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><b>Select a Team To Update:</b></label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                        <select required id="teamid" name="teamid" class="input-xlarge form-control" onchange="getTeamDetails(this.value);">
+                            
+                             <option value="">--Select--</option>
+                            <% for(var i=0; i<teamsList[0].length; i++) {%>
+                               <%if (teamsList[0][i].team_code.length > 0) { %>
+                                    <option value=<%= teamsList[0][i].team_id %>><%= teamsList[0][i].team_name %></option>
+                                       
+                               <% } %>
+                            <% } %>
+                        </select>
+                    </div>
+                </div><br/><br/>
 
                 <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team Name:<span class="mandatory-field">*</span></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <span class="error-name">The Team Name Already Exists.</span>
                         <input required name="teamName" id="teamName" type="text" placeholder="Team Name"
-                        class="input-xlarge form-control" onblur="checkTeamNameDuplication(this.value,'noupdate')"/>
+                        class="input-xlarge form-control" onblur="checkTeamNameDuplication(this.value,'update')"/>
                     </div>
                 </div>
 
@@ -57,31 +73,25 @@
                     </div>
                     
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                        <span class="error-code">The Team Code Already Exists.</span>
-                        <input required id="teamCode" name="teamCode" type="text" placeholder="Team Code" class="input-xlarge form-control uppercase-input" pattern="[A-Z0-9]{3}" maxlength=3 onblur="checkTeamCodeDuplication(this.value)"/>
-
-                        <p class="info-data">
-                            please Enter 3 letter alphanumeric code.
-                        </p>
-                        <button onclick="generateCode();" class="btn btn-info generateCodeButton" type="button">Generate Random Team Code</button>
+                        <input required id="teamCode" name="teamCode" type="text" placeholder="Team Code" class="input-xlarge form-control uppercase-input" pattern="[A-Z0-9]{3}" maxlength=3 readonly="readonly"/>
                     </div>
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Name:<span class="mandatory-field">*</span></label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Name:</label>
                     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                        <input required name="coachFirstName" type="text" placeholder="Coach First Name*"
+                        <input required name="coachFirstName" id="coachFirstName" type="text" placeholder="Coach First Name"
                         class="input-xlarge form-control" />
                     </div>
 
                     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                        <input name="coachLastName" type="text" placeholder="Coach Last Name"
+                        <input name="coachLastName" id="coachLastName" type="text" placeholder="Coach Last Name"
                         class="input-xlarge form-control" />
                     </div>
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Country:<span class="mandatory-field">*</span></label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Country:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <select required id="coachCountry" name="coachCountry" class="input-xlarge form-control">
                             <option value="">--Select--</option>
@@ -97,7 +107,14 @@
                 <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Contract Start(YYYY)</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                         <input id="coachcontractyear" name="coachcontractyear" type="number" class="input-xlarge form-control" placeholder="Contract Year" maxlength=4 />
+                         <input id="coachcontractyear" name="coachcontractyear" type="number" class="input-xlarge form-control" placeholder="Contract Start Year" maxlength=4 />
+                    </div>
+                </div>
+
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Contract End(YYYY)</label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                         <input id="coachcontractyearend" name="coachcontractyearend" type="number" class="input-xlarge form-control" placeholder="Contract End Year" maxlength=4 />
                     </div>
                 </div>
 
@@ -125,7 +142,7 @@
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <div class="input-group">
                           <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name="teamLogo" required>
+                            <input type="file" class="custom-file-input" id="teamLogo" aria-describedby="inputGroupFileAddon01" name="teamLogo" value="" required>
                             <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                           </div>
                         </div>
@@ -147,7 +164,7 @@
                 </div>
 
                 <div class="row">
-                    <input class="submitButton" type="submit" name="" id="" value="Submit" />
+                    <input class="submitButton" type="submit" name="" id="" value="Update" />
                 </div>
 
             </fieldset>
