--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -2,7 +2,7 @@
   margin-top: 3%;
   width: 70%; }
 
-label, h6 {
+label, h6, .info-data {
   color: #565D61; }
 
 input[type="submit"], input[type="button"] {
@@ -192,3 +192,35 @@ table.player-list td, table.player-list th {
 .mandatory-field {
   color: red;
   font-weight: bold; }
+
+.generateCodeButton {
+  border: 1px solid #eee;
+  padding: 5px; }
+
+.uppercase-input {
+  text-transform: uppercase; }
+
+.multi-select-section .bootstrap-select {
+  width: 100% !important; }
+
+.multi-select-section .dropdown-menu {
+  min-width: 100% !important; }
+
+.insert-stat .modal-body {
+  color: #46B3C8;
+  font-weight: bold;
+  padding: 25px 0px 0px 25px; }
+
+.insert-stat .modal-footer {
+  border: none; }
+
+.tournament-section .multi-select-section .bootstrap-select {
+  width: 70% !important; }
+
+.error-input, .error-input-name {
+  border: 1px solid red;
+  box-shadow: 0px 0px 5px red inset; }
+
+.error-code, .error-name {
+  display: none;
+  color: #dc3545; }
