--- a/app/views/updateTournament.ejs
+++ b/app/views/updateTournament.ejs
@@ -14,9 +14,10 @@
           <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
           <link rel="stylesheet" type="text/css" href="/css/style2.css" />
 
+          <script src="/js/script.js"></script>
           <script type="text/javascript">
-            
             $('select').selectpicker();
+
           </script>
    
 </head>
@@ -40,7 +41,7 @@
 
 <div class="container">
     <div class="row">
-         <form class="form-horizontal action-form tournament-section" action="newTournament" method="post" id="newTournament">
+         <form class="form-horizontal action-form tournament-section" action="updateTournamentDetails" method="post" id="updateTournamentDetails">
 
             <fieldset class="form-content">
                 <!-- Address form -->
@@ -51,9 +52,14 @@
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><b>Select a Tournament To Update:</b></label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <select required id="teamid" name="teamid" class="input-xlarge form-control" onchange="getTournamentDetails(this.value);">
-                            
+                            tournamentList
                              <option value="">--Select--</option>
-                            
+                            <% for(var i=0; i<tournamentList[0].length; i++) {%>
+                               <%if (tournamentList[0][i].tournament_name.length > 0) { %>
+                                    <option value=<%= tournamentList[0][i].tournament_id %>><%= tournamentList[0][i].tournament_name %></option>
+                                       
+                               <% } %>
+                            <% } %>
                         </select>
                     </div>
                 </div><br/><br/>
@@ -94,8 +100,6 @@
                 <div class="row multi-select-section">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Teams in the Tournament:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                         <!-- <textarea required class="form-control input-xlarg team-names" name="" id=""></textarea> -->
-
                         <select name="tournamentTeam" id="tournamentTeam" class="selectpicker" multiple data-live-search="true" required>
                             <% for(var i=0; i<teamsList[0].length; i++) {%>
                                <%if (teamsList[0][i].team_code.length > 0) { %>
